# public/swagger.json
@@ -11,94 +11,12 @@
 				"properties": {},
 				"type": "object",
 				"additionalProperties": {}
-			},
-			"Scores": {
-				"properties": {
-					"id": {
-						"type": "number",
-						"format": "double"
-					},
-					"createdDate": {
-						"type": "string",
-						"format": "date-time"
-					},
-					"updatedDated": {
-						"type": "string",
-						"format": "date-time"
-					},
-					"total_score": {
-						"type": "number",
-						"format": "double"
-					},
-					"category": {
-						"type": "string"
-					},
-					"user": {
-						"$ref": "#/components/schemas/User"
-					}
-				},
-				"required": [
-					"id",
-					"createdDate",
-					"updatedDated",
-					"total_score",
-					"category",
-					"user"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"User": {
-				"properties": {
-					"id": {
-						"type": "number",
-						"format": "double"
-					},
-					"createdDate": {
-						"type": "string",
-						"format": "date-time"
-					},
-					"updatedDated": {
-						"type": "string",
-						"format": "date-time"
-					},
-					"firstName": {
-						"type": "string"
-					},
-					"lastName": {
-						"type": "string"
-					},
-					"email": {
-						"type": "string"
-					},
-					"password": {
-						"type": "string"
-					},
-					"scores": {
-						"items": {
-							"$ref": "#/components/schemas/Scores"
-						},
-						"type": "array"
-					}
-				},
-				"required": [
-					"id",
-					"createdDate",
-					"updatedDated",
-					"firstName",
-					"lastName",
-					"email",
-					"password",
-					"scores"
-				],
-				"type": "object",
-				"additionalProperties": false
 			}
 		},
 		"securitySchemes": {}
 	},
 	"info": {
-		"title": "YamdGame",
+		"title": "yamd game",
 		"version": "0.0.1",
 		"description": "Awesome project developed with TypeORM.",
 		"contact": {}
@@ -137,56 +55,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"allOf": [
-										{
-											"properties": {
-												"updatedDated": {
-													"type": "string",
-													"format": "date-time"
-												},
-												"createdDate": {
-													"type": "string",
-													"format": "date-time"
-												},
-												"id": {
-													"type": "number",
-													"format": "double"
-												},
-												"scores": {
-													"items": {
-														"$ref": "#/components/schemas/Scores"
-													},
-													"type": "array"
-												},
-												"password": {
-													"type": "string"
-												},
-												"email": {
-													"type": "string"
-												},
-												"lastName": {
-													"type": "string"
-												},
-												"firstName": {
-													"type": "string"
-												}
-											},
-											"required": [
-												"updatedDated",
-												"createdDate",
-												"id",
-												"scores",
-												"password",
-												"email",
-												"lastName",
-												"firstName"
-											],
-											"type": "object"
-										},
-										{
-											"$ref": "#/components/schemas/ObjectLiteral"
-										}
-									]
+									"$ref": "#/components/schemas/ObjectLiteral"
 								}
 							}
 						}
